==> avaksru/IoTManager/src/modules/exec/OpenThermMonitor/OpenTherm.cpp <==
#include "OpenTherm.h"
#include "FunctionalInterrupt.h"

void OpenTherm::begin(void (*handleInterruptCallback)(void))
{
	pinMode(inPin, INPUT);
	pinMode(outPin, OUTPUT);
	if (handleInterruptCallback != NULL)
	{
		this->handleInterruptCallback = handleInterruptCallback;
		attachInterrupt(digitalPinToInterrupt(inPin), handleInterruptCallback, CHANGE);
	}
	else
	{
#if !defined(__AVR__)
		attachInterruptArg(
			digitalPinToInterrupt(inPin),
			OpenTherm::handleInterruptHelper,
			this,
			CHANGE);
#endif
	}
	activateBoiler();
	status = OpenThermStatus::READY;
	this->processResponseCallback = processResponseCallback;
}

void OpenTherm::begin(void (*handleInterruptCallback)(void), void (*processResponseCallback)(unsigned long, OpenThermResponseStatus))
{
	begin(handleInterruptCallback);
	this->processResponseCallback = processResponseCallback;
}

void OpenTherm::begin()
{
	begin(NULL);
}

void OpenTherm::begin(std::function<void(unsigned long, OpenThermResponseStatus)> processResponseFunction)
{
	begin();
	this->processResponseFunction = processResponseFunction;
}

int IRAM_ATTR OpenTherm::readState()
{
	return digitalRead(inPin);
}

void OpenTherm::setActiveState()
{
	digitalWrite(outPin, LOW);
}

void OpenTherm::setIdleState()
{
	digitalWrite(outPin, HIGH);
}

void OpenTherm::sendBit(bool high)
{
	if (high)
		setActiveState();
	else
		setIdleState();
	delayMicroseconds(500);
	if (high)
		setIdleState();
	else
		setActiveState();
	delayMicroseconds(500);
}

bool OpenTherm::sendRequestAsync(unsigned long request)
{
	noInterrupts();
	const bool ready = isReady();

	if (!ready)
	{
		interrupts();
		return false;
	}

	status = OpenThermStatus::REQUEST_SENDING;
	response = 0;
	responseStatus = OpenThermResponseStatus::NONE;

#ifdef INC_FREERTOS_H
	BaseType_t schedulerState = xTaskGetSchedulerState();
	if (schedulerState == taskSCHEDULER_RUNNING)
	{
		vTaskSuspendAll();
	}
#endif

	interrupts();

	sendBit(HIGH); // start bit
	for (int i = 31; i >= 0; i--)
	{
		sendBit(bitRead(request, i));
	}
	sendBit(HIGH); // stop bit
	setIdleState();

	responseTimestamp = micros();
	status = OpenThermStatus::RESPONSE_WAITING;

#ifdef INC_FREERTOS_H
	if (schedulerState == taskSCHEDULER_RUNNING)
	{
		xTaskResumeAll();
	}
#endif
	if (imitFlag)
		ImitationResponse(request);
	return true;
}

bool OpenTherm::sendResponse(unsigned long request)
{
	noInterrupts();
	const bool ready = isReady();

	if (!ready)
	{
		interrupts();
		return false;
	}

	status = OpenThermStatus::REQUEST_SENDING;
	response = 0;
	responseStatus = OpenThermResponseStatus::NONE;

#ifdef INC_FREERTOS_H
	BaseType_t schedulerState = xTaskGetSchedulerState();
	if (schedulerState == taskSCHEDULER_RUNNING)
	{
		vTaskSuspendAll();
	}
#endif

	interrupts();

	sendBit(HIGH); // start bit
	for (int i = 31; i >= 0; i--)
	{
		sendBit(bitRead(request, i));
	}
	sendBit(HIGH); // stop bit
	setIdleState();
	status = OpenThermStatus::READY;

#ifdef INC_FREERTOS_H
	if (schedulerState == taskSCHEDULER_RUNNING)
	{
		xTaskResumeAll();
	}
#endif

	return true;
}

void OpenTherm::end()
{
	detachInterrupt(digitalPinToInterrupt(inPin));
}
